# open-skills-host

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  server.py
agent/: __init__.py  callbacks.py  llm.py  runner.py  tool_registry.py
api/: cdn.py  main.py  schemas.py
api/routes/: skills.py
core/: config.py  discovery.py  errors.py  models.py  parser.py
